Fixed semicolon spacing

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -36,8 +36,7 @@ li {
 
 a:link, a:visited, a:hover, a:active {
   text-decoration: none;
-  color: #666
-  ;
+  color: #666;
 }
 
 .header, .footer {
